runtime image作成
他のOS向けイメージ作成手順追加